--- a/web/package.json
+++ b/web/package.json
@@ -1,33 +1,21 @@
 {
   "name": "thoughts",
-  "version": "0.12.1",
+  "version": "1.0.0",
   "private": true,
   "description": "一个简洁的思维导图",
   "author": "街角小林<1013335014@qq.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && node ../copy.js",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "buildLibrary": "node ./scripts/updateVersion.js && vue-cli-service build --mode library --target lib --name simpleMindMap ../simple-mind-map/full.js --dest ../simple-mind-map/dist && esbuild ../simple-mind-map/full.js --bundle --external:buffer --format=esm --outfile=../simple-mind-map/dist/simpleMindMap.esm.js && esbuild ../simple-mind-map/full.js --bundle --minify --external:buffer --format=esm --outfile=../simple-mind-map/dist/simpleMindMap.esm.min.js",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:build-all": "vue-cli-service electron:build -p never -mwl",
-    "electron:build-linux": "vue-cli-service electron:build -p never -l",
-    "electron:build-mac": "vue-cli-service electron:build -p never -m",
-    "electron:build-win": "vue-cli-service electron:build -p never -w",
-    "electron:serve": "vue-cli-service electron:serve",
     "format": "prettier --write src/* src/*/* src/*/*/* src/*/*/*/*",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
     "createNodeImageList": "node ./scripts/createNodeImageList.js"
   },
-  "main": "background.js",
   "dependencies": {
     "@toast-ui/editor": "^3.1.5",
     "codemirror": "^5.65.16",
     "core-js": "^3.6.5",
-    "electron-json-storage": "^4.6.0",
     "element-ui": "^2.15.1",
-    "fs-extra": "^7.0.1",
     "highlight.js": "^10.7.3",
     "katex": "^0.16.9",
     "simple-mind-map-plugin-themes": "^1.0.0",
@@ -45,8 +33,6 @@
     "@vue/cli-service": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "chokidar": "^3.5.3",
-    "electron": "^23.1.1",
-    "electron-devtools-installer": "^3.1.0",
     "esbuild": "^0.17.15",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -57,7 +43,6 @@
     "markdown-it-checkbox": "^1.1.0",
     "prettier": "^1.19.1",
     "vconsole": "^3.15.1",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.2",
     "webpack-dynamic-public-path": "^1.0.8"
