增加会员功能,优化体验

--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.15.1",
     "highlight.js": "^10.7.3",
     "katex": "^0.16.9",
+    "party-js": "^2.2.0",
     "simple-mind-map-plugin-themes": "^1.0.0",
     "uuid": "^3.4.0",
     "v-viewer": "^1.6.4",
@@ -38,8 +39,8 @@
     "esbuild": "^0.17.15",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "hasown": "^2.0.2",
     "express": "^4.21.2",
+    "hasown": "^2.0.2",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "markdown-it": "^13.0.1",
